--- a/src/styles/CarauselGallery.module.css
+++ b/src/styles/CarauselGallery.module.css
@@ -13,27 +13,32 @@
     --slide-spacing: 1em;
   }
 }
+
 @screen xl {
   .embla {
     --slide-size: 25%;
     --slide-spacing: -2em;
   }
 }
+
 .embla__viewport {
-  @apply relative ;
+  @apply relative;
   /* overflow: hidden; */
 }
+
 .embla__container {
   backface-visibility: hidden;
   display: flex;
   touch-action: pan-y pinch-zoom;
   margin-left: calc(var(--slide-spacing) * -1);
 }
+
 .embla__slide {
   flex: 0 0 var(--slide-size);
   min-width: 0;
   padding-left: var(--slide-spacing);
 }
+
 .embla__slide__number {
   box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
   border-radius: 1.8rem;
@@ -44,23 +49,26 @@
   justify-content: center;
   height: var(--slide-height);
 }
+
 .embla__controls {
-  @apply  absolute top-1/2 transform -translate-y-1/2 left-1/2 -translate-x-1/2 h-fit mt-0 z-10;
+  @apply absolute top-1/2 transform -translate-y-1/2 left-[51%] -translate-x-1/2 h-fit mt-0 z-10;
   /* display: grid;
   grid-template-columns: auto 1fr;
   justify-content: space-between;
   gap: 1.2rem;
   margin-top: 1.8rem; */
 }
+
 .embla__buttons {
-  @apply relative z-[-10] flex w-[25rem] md:w-[23rem] xl:w-[50rem] justify-between h-fit;
+  @apply relative z-[-10] flex w-[25rem] md:w-[23rem] xl:w-[53rem] justify-between h-fit;
   /* display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 0.6rem;
   align-items: center; */
 }
+
 .embla__button {
-  @apply w-[4rem] px-0 xl:w-[5rem] h-auto  lg:p-0;
+  @apply w-[4rem] px-0 xl:w-[5rem] h-auto lg:p-0;
   -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
   -webkit-appearance: none;
   appearance: none;
@@ -82,14 +90,17 @@
   align-items: center;
   justify-content: center;
 }
+
 .embla__button:disabled {
   color: var(--detail-high-contrast);
 }
+
 .embla__button__svg {
-  @apply fill-[#24FF00] text-[#24FF00] w-full md:w-1/3 h-auto lg:w-full lg:h-full ;
+  @apply fill-[#24FF00] text-[#24FF00] w-full md:w-1/3 h-auto lg:w-full lg:h-full;
   /* width: 35%;
   height: 35%; */
 }
+
 .embla__dots {
   display: flex;
   flex-wrap: wrap;
@@ -97,6 +108,7 @@
   align-items: center;
   margin-right: calc((2.6rem - 1.4rem) / 2 * -1);
 }
+
 .embla__dot {
   -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
   -webkit-appearance: none;
@@ -116,6 +128,7 @@
   justify-content: center;
   border-radius: 50%;
 }
+
 .embla__dot:after {
   box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
   width: 1.4rem;
@@ -125,10 +138,12 @@
   align-items: center;
   content: '';
 }
+
 .embla__dot--selected:after {
   box-shadow: inset 0 0 0 0.2rem var(--text-body);
 }
+
 .embla__slide__number {
-@apply relative z-30 ;
+  @apply relative z-30;
   backface-visibility: hidden;
 }
