--- a/src/index.scss
+++ b/src/index.scss
@@ -77,6 +77,8 @@
   }
 }
 
+
+
 .embla {
   @apply relative py-12 md:py-52 overflow-hidden;
   max-width: 48rem;
@@ -208,7 +210,7 @@
   border-radius: 50%;
   display: flex;
   align-items: center;
-  content: "";
+  content: '';
 }
 
 .embla__dot--selected:after {
@@ -249,9 +251,9 @@
 
 .flare.pointer {
   opacity: 0 !important;
-  transition: width 0.2s ease-in-out, height 0.2s ease-in-out,
-    opacity 0.2s ease-in-out;
+  transition: width 0.2s ease-in-out, height 0.2s ease-in-out, opacity 0.2s ease-in-out;
 }
+
 
 #GradientRounded {
   @apply backdrop-blur-lg shadow-2xl shadow-black;
@@ -266,12 +268,7 @@
   bottom: 0;
   border-radius: 1rem;
   border: 3px solid transparent;
-  background: linear-gradient(
-      129deg,
-      rgba(5, 255, 0, 1) 0%,
-      rgba(36, 255, 0, 0) 38%
-    )
-    border-box;
+  background: linear-gradient(129deg, rgba(5, 255, 0, 1) 0%, rgba(36, 255, 0, 0) 38%) border-box;
   -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: destination-out;
   mask-composite: exclude;
@@ -291,13 +288,10 @@
   bottom: 0;
   border-radius: 1rem;
   border: 3px solid transparent;
-  background: linear-gradient(
-      115deg,
+  background: linear-gradient(115deg,
       hsl(112deg 100% 50%) 0%,
       hsl(105deg 88% 33%) 50%,
-      hsl(101deg 72% 17%) 100%
-    )
-    border-box;
+      hsl(101deg 72% 17%) 100%) border-box;
   -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: destination-out;
   mask-composite: exclude;
@@ -316,16 +310,12 @@
   bottom: 0;
   border-radius: 0rem;
   border-top: 4px solid transparent;
-  background: linear-gradient(
-      129deg,
-      rgba(5, 255, 0, 1) 0%,
-      rgba(36, 255, 0, 0) 38%
-    )
-    border-box;
+  background: linear-gradient(129deg, rgba(5, 255, 0, 1) 0%, rgba(36, 255, 0, 0) 38%) border-box;
   -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: destination-out;
   mask-composite: exclude;
 }
+
 #gradientBox {
   /* @apply ; */
 }
@@ -339,17 +329,12 @@
   bottom: 0;
   border-radius: 5rem;
   border: 2px solid transparent;
-  background: linear-gradient(
-      130deg,
-      rgba(0, 255, 56, 1) 0%,
-      rgba(0, 255, 56, 0) 79%,
-      rgba(0, 255, 56, 0) 100%
-    )
-    border-box;
+  background: linear-gradient(130deg, rgba(0, 255, 56, 1) 0%, rgba(0, 255, 56, 0) 79%, rgba(0, 255, 56, 0) 100%) border-box;
   -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: destination-out;
   mask-composite: exclude;
 }
+
 #gradientBoxContactUs {
   @apply backdrop-blur-lg shadow-2xl shadow-black;
   position: relative;
@@ -364,14 +349,7 @@
   bottom: 0;
   border-radius: 3rem;
   border: 3px solid transparent;
-  background: linear-gradient(
-      145deg,
-      rgba(5, 250, 1, 1) 0%,
-      rgba(0, 0, 0, 0) 27%,
-      rgba(0, 0, 0, 0) 70%,
-      rgba(5, 250, 1, 1) 100%
-    )
-    border-box;
+  background: linear-gradient(145deg, rgba(5, 250, 1, 1) 0%, rgba(0, 0, 0, 0) 27%, rgba(0, 0, 0, 0) 70%, rgba(5, 250, 1, 1) 100%) border-box;
   -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: destination-out;
   mask-composite: exclude;
@@ -390,14 +368,7 @@
   bottom: 0;
   border-radius: 3rem;
   border: 3px solid transparent;
-  background: linear-gradient(
-      145deg,
-      rgba(5, 250, 1, 1) 0%,
-      rgba(0, 0, 0, 0) 27%,
-      rgba(0, 0, 0, 0) 70%,
-      rgba(5, 250, 1, 1) 100%
-    )
-    border-box;
+  background: linear-gradient(145deg, rgba(5, 250, 1, 1) 0%, rgba(0, 0, 0, 0) 27%, rgba(0, 0, 0, 0) 70%, rgba(5, 250, 1, 1) 100%) border-box;
   -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: destination-out;
   mask-composite: exclude;
@@ -436,6 +407,7 @@
     opacity: 0;
   }
 }
+
 
 .react-video-player {
   video {
