--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 #root {
   max-width: 100%;
   margin: 0 auto;
-  font-family: "Inter Variable", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
